Fix bugs on Swagger
